# nonebot-plugin-lxns-maimai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_lxns_maimai/: __init__.py  annotated.py  config.py  depends.py  exception.py  filters.py  model.py  render.py  utils.py
nonebot_plugin_lxns_maimai/apis/: request.py
nonebot_plugin_lxns_maimai/migrations/: ce7ee9d4e359_first_revision.py
nonebot_plugin_lxns_maimai/resources/templates/: best50.html.jinja2  icons.macros.html.jinja2  index.css  macros.html.jinja2
nonebot_plugin_lxns_maimai/schema/: __init__.py  alias.py  collection.py  genre.py  notes.py  player.py  score.py  song.py  trend.py  version.py
nonebot_plugin_lxns_maimai/schema/enum/: __init__.py  fctype.py  fstype.py  levelindex.py  ratetype.py  songtype.py
